test_data/Json/Unexpected/Unserializable/InvalidModelType/AnnotatedRelationshipElement/wrong.json.exception
Expected the model type 'AnnotatedRelationshipElement', but got soReallyUtterlyInvalid at: modelType